helm/loki/service-NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app: loki
  ports:
    - protocol: TCP
      port: 3100
      targetPort: 3100
      nodePort: 32007
